--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -78,6 +78,14 @@
     <Compile Include="Migrations\202502101222453_mig_writer_edit2.Designer.cs">
       <DependentUpon>202502101222453_mig_writer_edit2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502170821227_mig_image.cs" />
+    <Compile Include="Migrations\202502170821227_mig_image.Designer.cs">
+      <DependentUpon>202502170821227_mig_image.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202502170843007_mig_writer_addstatus.cs" />
+    <Compile Include="Migrations\202502170843007_mig_writer_addstatus.Designer.cs">
+      <DependentUpon>202502170843007_mig_writer_addstatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -100,6 +108,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502101222453_mig_writer_edit2.resx">
       <DependentUpon>202502101222453_mig_writer_edit2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502170821227_mig_image.resx">
+      <DependentUpon>202502170821227_mig_image.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502170843007_mig_writer_addstatus.resx">
+      <DependentUpon>202502170843007_mig_writer_addstatus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
