--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Abstract\IContactDal.cs" />
     <Compile Include="Abstract\IContentDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
+    <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
     <Compile Include="Concrete\Context.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="EntityFramework\EfContactDal.cs" />
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
+    <Compile Include="EntityFramework\EfMessageDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202502061032047_mig1.cs" />
     <Compile Include="Migrations\202502061032047_mig1.Designer.cs">
@@ -93,6 +95,10 @@
     <Compile Include="Migrations\202502171439111_mig_headingstatus.cs" />
     <Compile Include="Migrations\202502171439111_mig_headingstatus.Designer.cs">
       <DependentUpon>202502171439111_mig_headingstatus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202502241408080_mig_add_message_class.cs" />
+    <Compile Include="Migrations\202502241408080_mig_add_message_class.Designer.cs">
+      <DependentUpon>202502241408080_mig_add_message_class.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -128,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502171439111_mig_headingstatus.resx">
       <DependentUpon>202502171439111_mig_headingstatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502241408080_mig_add_message_class.resx">
+      <DependentUpon>202502241408080_mig_add_message_class.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
