--- a/MvcProjeKampi/MvcProjeKampi.csproj
+++ b/MvcProjeKampi/MvcProjeKampi.csproj
@@ -333,6 +333,15 @@
     <Content Include="AdminLTE-3.0.4\images\saudi.jpg" />
     <Content Include="AdminLTE-3.0.4\images\thumbs_b_c_5bebe15ba2c5f06754c8b6f46bfa76f1.jpg" />
     <Content Include="AdminLTE-3.0.4\images\İtalya’da-Mutlaka-Görmeniz-Gereken-10-Şehir.jpg" />
+    <Content Include="AdminLTE-3.0.4\Image\1.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\2.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\3.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\4.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\5.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\6.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\7.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\8.JPG" />
+    <Content Include="AdminLTE-3.0.4\Image\9.JPG" />
     <Content Include="AdminLTE-3.0.4\index.html" />
     <Content Include="AdminLTE-3.0.4\index2.html" />
     <Content Include="AdminLTE-3.0.4\index3.html" />
@@ -2054,6 +2063,48 @@
     <Content Include="AdminLTE-3.0.4\plugins\toastr\toastr.min.css" />
     <Content Include="AdminLTE-3.0.4\plugins\toastr\toastr.min.js" />
     <Content Include="AdminLTE-3.0.4\starter.html" />
+    <Content Include="AdminLTE-3.0.4\web\css\aos-animation.css" />
+    <Content Include="AdminLTE-3.0.4\web\css\aos.css" />
+    <Content Include="AdminLTE-3.0.4\web\css\bootstrap.css" />
+    <Content Include="AdminLTE-3.0.4\web\css\fontawesome-all.css" />
+    <Content Include="AdminLTE-3.0.4\web\css\roadmap.css" />
+    <Content Include="AdminLTE-3.0.4\web\css\simpleLightbox.css" />
+    <Content Include="AdminLTE-3.0.4\web\css\snow.css" />
+    <Content Include="AdminLTE-3.0.4\web\css\style.css" />
+    <Content Include="AdminLTE-3.0.4\web\images\banner.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\close.png" />
+    <Content Include="AdminLTE-3.0.4\web\images\contact.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\exp.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g1.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g2.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g3.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g4.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g5.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g6.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g7.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g8.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\g9.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\loader.gif" />
+    <Content Include="AdminLTE-3.0.4\web\images\move_up.png" />
+    <Content Include="AdminLTE-3.0.4\web\images\next.png" />
+    <Content Include="AdminLTE-3.0.4\web\images\prev.png" />
+    <Content Include="AdminLTE-3.0.4\web\images\serve.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\stats.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\images\testimonials.jpg" />
+    <Content Include="AdminLTE-3.0.4\web\index.html" />
+    <Content Include="AdminLTE-3.0.4\web\js\aos.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\bootstrap.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\easing.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\jquery-2.2.3.min.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\jquery.countup.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\jquery.roadmap.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\jquery.waypoints.min.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\move-top.js" />
+    <Content Include="AdminLTE-3.0.4\web\js\simpleLightbox.js" />
+    <Content Include="AdminLTE-3.0.4\web\w3layouts-license.txt" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-brands-400.svg" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-regular-400.svg" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-solid-900.svg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -2646,6 +2697,18 @@
     <Content Include="AdminLTE-3.0.4\login-form-20\scss\bootstrap\_utilities.scss" />
     <Content Include="AdminLTE-3.0.4\login-form-20\scss\bootstrap\_variables.scss" />
     <Content Include="AdminLTE-3.0.4\login-form-20\scss\style.scss" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-brands-400.eot" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-brands-400.ttf" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-brands-400.woff" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-brands-400.woff2" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-regular-400.eot" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-regular-400.ttf" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-regular-400.woff" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-regular-400.woff2" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-solid-900.eot" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-solid-900.ttf" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-solid-900.woff" />
+    <Content Include="AdminLTE-3.0.4\web\webfonts\fa-solid-900.woff2" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2716,6 +2779,8 @@
     <Content Include="Views\WriterPanel\AllHeading.cshtml" />
     <Content Include="Views\WriterPanelContent\AddContent.cshtml" />
     <Content Include="Views\WriterPanelContent\ToDoList.cshtml" />
+    <Content Include="Views\Home\HomePage.cshtml" />
+    <Content Include="Views\Content\GetAllContent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
